--- a/src/app/components/entidades/carrinho/carrinho.component.html
+++ b/src/app/components/entidades/carrinho/carrinho.component.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="pedido">
-      <button type="button" class="btn">Fazer pedido</button>
+      <button type="button" class="btn" [routerLink]="['/pagamento']">Fazer pedido</button>
     </div>
 
   </div>
